--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -1,18 +1,14 @@
 :root {
-    --color-bg-primary: #0252cc;
-    --color-bg-secondary: #ffc402;
-    --color-bg-default: #fff;
-    --color-bg-inverse: #fff;
+    --color-bg-primary: #FFFFFF;
+    --color-bg-secondary: #67568c;
+    --color-bg-tertiary: #fbdd74;
 
-    --color-text-primary: #ff335f;
-    --color-text-secondary: #755f17;
-    --color-text-default: #444;
-    --color-text-default-soft: #999;
-    --color-text-inverse: #444;
-    --color-text-inverse-soft: #999;
+    --color-text-primary: #1f1235;
+    --color-text-secondary: #f25f4c;
+    --color-text-tertiary: #ff6e6c;
 
-    --font-display: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    --font-body: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-display: "Rubik", Helvetica, Arial, sans-serif;
+    --font-body: "Rubik", Helvetica, Arial, sans-serif;
 
     --font-weight-normal: 400;
     --font-weight-display: 400;
@@ -23,28 +19,13 @@
 
 /*! purgecss start ignore */
 .theme-dark {
-    --color-bg-primary: #c0b283;
-    --color-bg-secondary: #dcd0c0;
-    --color-bg-default: #f4f4f4;
-    --color-bg-inverse: #373737;
+    --color-bg-primary: #16161a;
+    --color-bg-secondary: #72757e;
+    --color-bg-tertiary: #2cb67d;
 
-    --color-text-primary: #fff;
-    --color-text-secondary: #927e7e;
-    --color-text-default: #373737;
-    --color-text-default-soft: #6a6a6a;
-    --color-text-inverse: #fff;
-    --color-text-inverse-soft: #bbb;
-
-    --font-display: Georgia, Times, "Times New Roman", serif;
-    --font-body: Rubik, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans",
-    "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana,
-    "Verdana Ref", sans-serif;
-
-    --font-weight-normal: 400;
-    --font-weight-display: 400;
-    --font-weight-btn: 600;
-
-    --rounded-btn: 0;
+    --color-text-primary: #232946;
+    --color-text-secondary: #eebbc3;
+    --color-text-tertiary: #e53170;
 }
 
 /*! purgecss end ignore */
