I mean, it's not terrible

--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -1,31 +1,18 @@
 :root {
     --color-bg-primary: #FFFFFF;
-    --color-bg-secondary: #72757e;
-    --color-bg-tertiary: #fbdd74;
+    --color-bg-secondary: #232946;
 
-    --color-text-primary: #232946;
-    --color-text-secondary: #f25f4c;
-    --color-text-tertiary: #ff6e6c;
-
-    --font-display: "Rubik", Helvetica, Arial, sans-serif;
-    --font-body: "Rubik", Helvetica, Arial, sans-serif;
-
-    --font-weight-normal: 400;
-    --font-weight-display: 400;
-    --font-weight-btn: 600;
-
-    --rounded-btn: 0.25rem;
+    --color-text-primary: #ff6e6c;
+    --color-text-secondary: #eebbc3;
 }
 
 /*! purgecss start ignore */
 .theme-dark {
-    --color-bg-primary: #16161a;
-    --color-bg-secondary: #72757e;
-    --color-bg-tertiary: #2cb67d;
+    --color-bg-primary: #ff6e6c;
+    --color-bg-secondary: #927ac6;
 
-    --color-text-primary: #927ac6;
-    --color-text-secondary: #eebbc3;
-    --color-text-tertiary: #e53170;
+    --color-text-primary: #FFFFFF;
+    --color-text-secondary: #2cb67d;
 }
 
 /*! purgecss end ignore */
